src/test/deca/context/invalid/declClass-undeclaredClass.context
declClass-undeclaredClass.deca:1: